Allow the use of DISCOURSE_REDIS_SOCKET for redis configuration
This mirrors the DISCOURSE_DB_SOCKET setting. This is intended for
multi-container setups that want to be IP-independent.

--- a/config/discourse_defaults.conf
+++ b/config/discourse_defaults.conf
@@ -82,6 +82,9 @@ redis_host = localhost
 # redis server port
 redis_port = 6379
 
+# redis server socket (non-empty to use)
+redis_socket =
+
 # redis database
 redis_db = 0
 
