--- a/config/discourse_quickstart.conf
+++ b/config/discourse_quickstart.conf
@@ -61,6 +61,9 @@ developer_emails =
 # redis server port
 # redis_port = 6379
 
+# redis server socket, if using socket
+# redis_socket =
+
 # redis password
 # redis_password =
 
