Remove SSLv3 support to prevent poodle attack

--- a/config/nginx.sample.ssl.conf
+++ b/config/nginx.sample.ssl.conf
@@ -38,7 +38,7 @@ server {
   # Put your ssl cert in your main nginx config directory (/etc/nginx)
   ssl_certificate your-hostname-cert.pem;
   ssl_certificate_key your-hostname-cert.key;
-  ssl_protocols SSLv3 TLSv1 TLSv1.1 TLSv1.2;
+  ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
   ssl_ciphers HIGH:!aNULL:!MD5;
 
   gzip on;
