gravatar settings and global env
- Added the `enable_gravatar` to store the gravatar images
- Rename `automatically_download_gravatars` to `automatically_refresh_gravatars`, also change the scheduled job to refresh gravatars
- Using GlobalSetting.gravatar_url(DISCOURSE_GRAVATAR_URL) to download gravatars.
- Avatar selector UI now reflects the site settings.
- FIX: the uploaded custom avatar can not be save

--- a/config/site_settings.yml
+++ b/config/site_settings.yml
@@ -483,10 +483,15 @@ files:
   allow_profile_backgrounds:
     client: true
     default: true
-  automatically_download_gravatars: true
+  enable_gravatar:
+    client: true
+    default: true
+    refresh: true
+  automatically_refresh_gravatars: true
   allow_uploaded_avatars:
     client: true
     default: true
+    refresh: true
   allow_animated_avatars:
     client: true
     default: false
