FEATURE: suppress slug site setting

--- a/config/site_settings.yml
+++ b/config/site_settings.yml
@@ -713,6 +713,8 @@ uncategorized:
     client: true
     default: true
 
+  suppress_slug: false
+
   # Search
   min_search_term_length:
     client: true
