FEATURE: Add more columns to outbound EmailLog
This adds the following columns to EmailLog:

* cc_addresses
* cc_user_ids
* topic_id
* raw

This is to bring the EmailLog table closer in parity to
IncomingEmail so it can be better utilized for Group SMTP
and IMAP mailing.

The raw column contains the full content of the outbound email,
but _only_ if the new hidden site setting
enable_raw_outbound_email_logging is enabled. Most sites do not
need it, and it's mostly required for IMAP and SMTP sending.

In the next pull request, there will be a migration to backfill
topic_id on the EmailLog table, at which point we can remove the
topic fallback method on EmailLog

--- a/config/site_settings.yml
+++ b/config/site_settings.yml
@@ -1216,6 +1216,9 @@ email:
     client: true
     default: true
     hidden: true
+  enable_raw_outbound_email_logging:
+    default: false
+    hidden: true
 
 files:
   max_image_size_kb:
