FEATURE: Optimize images before upload

--- a/config/nginx.sample.conf
+++ b/config/nginx.sample.conf
@@ -1,6 +1,7 @@
 # Additional MIME types that you'd like nginx to handle go in here
 types {
     text/csv csv;
+    application/wasm wasm;
 }
 
 upstream discourse {
@@ -47,7 +48,7 @@ server {
   gzip_vary on;
   gzip_min_length 1000;
   gzip_comp_level 5;
-  gzip_types application/json text/css text/javascript application/x-javascript application/javascript image/svg+xml;
+  gzip_types application/json text/css text/javascript application/x-javascript application/javascript image/svg+xml application/wasm;
   gzip_proxied any;
 
   # Uncomment and configure this section for HTTPS support
