--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@mixer/parallel-prettier": "^2.0.1",
     "chrome-launcher": "^0.12.0",
     "chrome-remote-interface": "^0.25",
+    "licensee": "^8.2.0",
     "lodash-cli": "https://github.com/lodash-archive/lodash-cli.git",
     "pretender": "^1.6",
     "puppeteer": "1.20",
