--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "jquery": "3.5.1",
     "jquery-color": "3.0.0-alpha.1",
     "jquery-tags-input": "1.3.5",
-    "jquery.autoellipsis": "https://github.com/pvdspek/jquery.autoellipsis",
+    "@kemitchell/jquery.autoellipsis": "1.0.10",
     "magnific-popup": "1.1.0",
     "markdown-it": "10.0.0",
     "moment": "2.29.1",
