--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "@highlightjs/cdn-assets": "^10.6.0",
     "@json-editor/json-editor": "^2.5.2",
     "@popperjs/core": "v2.0.6",
+    "@uppy/aws-s3": "^1.7.12",
+    "@uppy/aws-s3-multipart": "^1.8.18",
+    "@uppy/core": "^1.19.2",
+    "@uppy/xhr-upload": "^1.7.5",
     "ace-builds": "1.4.12",
     "blueimp-file-upload": "10.13.0",
     "bootbox": "3.2.0",
@@ -42,9 +46,9 @@
   "devDependencies": {
     "@arkweid/lefthook": "^0.7.2",
     "@mixer/parallel-prettier": "^2.0.1",
+    "browserify": "^17.0.0",
     "chrome-launcher": "^0.12.0",
     "chrome-remote-interface": "^0.25",
-    "lodash-cli": "https://github.com/lodash-archive/lodash-cli.git",
     "pretender": "^1.6",
     "puppeteer": "1.20",
     "qunit": "2.8.0",
