--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "browserify": "^17.0.0",
     "chrome-launcher": "^0.12.0",
     "chrome-remote-interface": "^0.25",
+    "lodash-cli": "https://github.com/lodash-archive/lodash-cli.git",
     "pretender": "^1.6",
     "puppeteer": "1.20",
     "qunit": "2.8.0",
