Add temporary hidden site setting, fix linting

--- a/config/site_settings.yml
+++ b/config/site_settings.yml
@@ -353,6 +353,9 @@ basic:
     default: "arial"
     enum: "BaseFontSetting"
     refresh: true
+  order_stylesheets:
+    default: false
+    hidden: true
 
 login:
   invite_only:
