--- a/config/site_settings.yml
+++ b/config/site_settings.yml
@@ -2309,6 +2309,8 @@ uncategorized:
   create_revision_on_bulk_topic_moves:
     default: true
 
+  allow_changing_staged_user_tracking: false
+
 user_preferences:
   default_email_digest_frequency:
     enum: "DigestEmailSiteSetting"
