--- a/config/site_settings.yml
+++ b/config/site_settings.yml
@@ -271,6 +271,10 @@ basic:
     client: true
     default: false
     hidden: true
+  enable_direct_s3_uploads:
+    client: true
+    default: false
+    hidden: true
   default_theme_id:
     default: -1
     hidden: true
