--- a/app/assets/javascripts/discourse-hbr/package.json
+++ b/app/assets/javascripts/discourse-hbr/package.json
@@ -46,7 +46,9 @@
     "loader.js": "^4.7.0"
   },
   "engines": {
-    "node": "8.* || >= 10.*"
+    "node": ">= 12.*",
+    "npm": "please-use-yarn",
+    "yarn": ">= 1.22.11"
   },
   "ember": {
     "edition": "octane"
