includes file in .github folder

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -57,7 +57,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: build
         shell: bash
-        run: ./build-redis-with-openssl.sh "$REDIS_VERSION"
+        run: ./.github/build-redis-with-openssl.sh "$REDIS_VERSION"
         env:
           REDIS_VERSION: ${{ matrix.redis }}
 
