--- a/config/site_settings.yml
+++ b/config/site_settings.yml
@@ -1573,6 +1573,8 @@ security:
       - "no"
       - "staff"
       - "all"
+  second_factor_confirmation:
+    default: false
   force_https:
     default: false
   same_site_cookies:
