FEATURE: Add email blocking using regex
blocked_email_pattern site setting can block email matching a regular
expression.

--- a/config/site_settings.yml
+++ b/config/site_settings.yml
@@ -507,6 +507,8 @@ login:
     default: "mailinator.com"
     type: list
     list_type: simple
+  blocked_email_pattern:
+    default: ""
   allowed_email_domains:
     default: ""
     type: list
