FEATURE: Allow read state to published for posts in a category.
Experimental at this point so hidden behind a site setting.

--- a/config/site_settings.yml
+++ b/config/site_settings.yml
@@ -788,6 +788,10 @@ posting:
     refresh: true
   allow_duplicate_topic_titles: false
   allow_duplicate_topic_titles_category: false
+  allow_publish_read_state_on_categories:
+    default: false
+    client: true
+    hidden: true
   min_title_similar_length:
     client: true
     default: 10
