--- a/config/discourse_defaults.conf
+++ b/config/discourse_defaults.conf
@@ -220,7 +220,7 @@ s3_cdn_url =
 s3_endpoint =
 s3_http_continue_timeout =
 s3_install_cors_rule =
-
+secret = 'secretkey'
 ### rate limits apply to all sites
 max_user_api_reqs_per_minute = 20
 max_user_api_reqs_per_day = 2880
