--- a/config/site_settings.yml
+++ b/config/site_settings.yml
@@ -406,8 +406,8 @@ login:
   google_oauth2_hd:
     default: ""
   google_oauth2_hd_groups:
-    default: ""
-    type: list
+    default: false
+    validator: GoogleOauth2HdGroupsValidator
   enable_twitter_logins:
     default: false
   twitter_consumer_key:
