--- a/.github/workflows/ember.yml
+++ b/.github/workflows/ember.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   build:
     name: run
-    runs-on: ubuntu-latest
+    runs-on: macos-11
     container: discourse/discourse_test:release
     timeout-minutes: 60
 
